force-app/main/default/objects/Unit__c/fields/Power_availabletext__c.field-meta.xml
<CustomField>
    <fullName>Power_availabletext__c</fullName>
    <label>Power available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>