force-app/main/default/objects/Unit__c/fields/Power_back_uptext__c.field-meta.xml
<CustomField>
    <fullName>Power_back_uptext__c</fullName>
    <label>Power back up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>