force-app/main/default/objects/Unit__c/fields/Racking_Systemtext__c.field-meta.xml
<CustomField>
    <fullName>Racking_Systemtext__c</fullName>
    <label>Racking System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>