force-app/main/default/objects/Unit__c/fields/Rent_Free_Period__c.field-meta.xml
<CustomField>
    <fullName>Rent_Free_Period__c</fullName>
    <label>Rent Free Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>