force-app/main/default/objects/Unit__c/fields/Rent_per_UOM__c.field-meta.xml
<CustomField>
    <fullName>Rent_per_UOM__c</fullName>
    <label>Rent per UOM</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>