force-app/main/default/objects/Unit__c/fields/Rent_per_uom_Price_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Rent_per_uom_Price_per_uom__c</fullName>
    <label>Rent per uom/ Price per uom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>