force-app/main/default/objects/Unit__c/fields/Road_Width_UOM__c.field-meta.xml
<CustomField>
    <fullName>Road_Width_UOM__c</fullName>
    <label>Road Width (UOM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>