force-app/main/default/objects/Unit__c/fields/Saleable_Area_in_guntha__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_in_guntha__c</fullName>
    <formula>Saleable_Area_in_sq_ft__c  / 1088.9848169</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area (in guntha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>