force-app/main/default/objects/Unit__c/fields/Saleable_Area_in_hectacres__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_in_hectacres__c</fullName>
    <formula>Saleable_Area_in_sq_ft__c/ 107639</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area (in hectacres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>