force-app/main/default/objects/Unit__c/fields/Saleable_Area_in_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_in_sq_ft__c</fullName>
    <formula>if( TEXT(Unit_UOM__c) == &apos;Sq.Ft.&apos;,   Saleable_Area__c  ,
if( TEXT(Unit_UOM__c) == &apos;Sq.Meter&apos;,  Saleable_Area__c * 10.7639 ,
if( TEXT(Unit_UOM__c) == &apos;Acres&apos;,  Saleable_Area__c * 43560 ,
if( TEXT(Unit_UOM__c) == &apos;Guntha&apos;,  Saleable_Area__c * 1089 ,
if( TEXT(Unit_UOM__c) == &apos;Bigha&apos;,  Saleable_Area__c * 17452.0069808 ,
if( TEXT(Unit_UOM__c) == &apos;Sq. Yards&apos;,  Saleable_Area__c * 8.999991288 ,
if( TEXT(Unit_UOM__c) == &apos;Hectares&apos;,  Saleable_Area__c * 107639 ,
0
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area (in sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>