force-app/main/default/objects/Unit__c/fields/Saleable_Area_in_sq_mt__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_in_sq_mt__c</fullName>
    <formula>Saleable_Area_in_sq_ft__c / 10.764</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area (in sq.mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>