force-app/main/default/objects/Unit__c/fields/Saleable_Area_UOM__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_UOM__c</fullName>
    <label>Chargeable Area UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Square</valueSetName>
    </valueSet>
</CustomField>