force-app/main/default/objects/Unit__c/fields/Shed_for_Outstation__c.field-meta.xml
<CustomField>
    <fullName>Shed_for_Outstation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shed for Outstation</label>
    <type>Checkbox</type>
</CustomField>