force-app/main/default/objects/Unit__c/fields/SIDCO_SIPCOT_CAM_Addl_Charges_UOM__c.field-meta.xml
<CustomField>
    <fullName>SIDCO_SIPCOT_CAM_Addl_Charges_UOM__c</fullName>
    <label>SIDCO/SIPCOT/CAM or Addl Charges UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Square</valueSetName>
    </valueSet>
</CustomField>