force-app/main/default/objects/Unit__c/fields/SIDCO_SIPCOT_CAM_or_Addl_Charges__c.field-meta.xml
<CustomField>
    <fullName>SIDCO_SIPCOT_CAM_or_Addl_Charges__c</fullName>
    <label>SIDCO / SIPCOT / CAM or Addl Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>