force-app/main/default/objects/Unit__c/fields/SIDCO_SIPCOT_CAM_or_Addl_Charges_UOM__c.field-meta.xml
<CustomField>
    <fullName>SIDCO_SIPCOT_CAM_or_Addl_Charges_UOM__c</fullName>
    <description>SIDCO/SIPCOT/CAMorAddl Charges SqFt/SqMt</description>
    <label>SIDCO/SIPCOT/CAM/Addl Charges SqFt/SqMt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_UOM</valueSetName>
    </valueSet>
</CustomField>