force-app/main/default/objects/Unit__c/fields/Size_Range__c.field-meta.xml
<CustomField>
    <fullName>Size_Range__c</fullName>
    <label>Size Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>below 10000</fullName>
            </value>
            <value>
                <fullName>10000 - 25000</fullName>
            </value>
            <value>
                <fullName>25000 - 50000</fullName>
            </value>
            <value>
                <fullName>50000 - 100000</fullName>
            </value>
            <value>
                <fullName>Above 1 Lakh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>