force-app/main/default/objects/Unit__c/fields/Source_referenceby__c.field-meta.xml
<CustomField>
    <fullName>Source_referenceby__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>