force-app/main/default/objects/Unit__c/fields/Total_Rent_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Total_Price__c</fullName>
    <formula>Saleable_Area__c * Rent_per_uom_Price_per_uom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Chargeable Area * Rent / Price Per UOM</inlineHelpText>
    <label>Total Rent/ Total Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>