force-app/main/default/objects/Unit__c/fields/Total_Rent_Total_Price_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Total_Price_Text__c</fullName>
    <label>Total Rent Total Price Text</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>