force-app/main/default/objects/Unit__c/fields/Tower_Block__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower/Block</label>
    <referenceTo>Tower_Block__c</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>