force-app/main/default/objects/Unit__c/fields/Unit_Available__c.field-meta.xml
<CustomField>
    <fullName>Unit_Available__c</fullName>
    <label>Unit Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available for lease</fullName>
            </value>
            <value>
                <fullName>Available for sales</fullName>
            </value>
            <value>
                <fullName>Available for sales/lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>