force-app/main/default/objects/Unit__c/fields/Unit_Location__c.field-meta.xml
<CustomField>
    <fullName>Unit_Location__c</fullName>
    <label>Unit Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>