force-app/main/default/objects/Unit__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <displayFormat>UN-{0000}</displayFormat>
    <label>Unit Number</label>
    <type>AutoNumber</type>
</CustomField>