force-app/main/default/objects/Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Available for lease</fullName>
                <isActive>false</isActive>
                <label>Available for lease</label>
            </value>
            <value>
                <fullName>Available for sales</fullName>
                <isActive>false</isActive>
                <label>Available for sales</label>
            </value>
            <value>
                <fullName>Available for sales/lease</fullName>
                <isActive>false</isActive>
                <label>Available for sales/lease</label>
            </value>
            <value>
                <fullName>Hold</fullName>
                <isActive>false</isActive>
                <label>Hold</label>
            </value>
            <value>
                <fullName>On lease</fullName>
                <isActive>false</isActive>
                <label>On lease</label>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
                <isActive>false</isActive>
                <label>Shortlisted</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <isActive>false</isActive>
                <label>Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>