force-app/main/default/objects/Unit__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>Cents</fullName>
            </value>
            <value>
                <fullName>Sqft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>