force-app/main/default/objects/Unit__c/fields/Ventilation__c.field-meta.xml
<CustomField>
    <fullName>Ventilation__c</fullName>
    <label>Ventilation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turbo</fullName>
            </value>
            <value>
                <fullName>Ridge vent</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>