force-app/main/default/objects/Unit__c/fields/Water_availability__c.field-meta.xml
<CustomField>
    <fullName>Water_availability__c</fullName>
    <label>Water availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bore</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Bore &amp; Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>