force-app/main/default/objects/Unit__c/fields/Year_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Construction__c</fullName>
    <label>Year of Construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Newly Constructed</fullName>
            </value>
            <value>
                <fullName>below 5 years</fullName>
            </value>
            <value>
                <fullName>5 - 10 Years</fullName>
            </value>
            <value>
                <fullName>10-20 years</fullName>
            </value>
            <value>
                <fullName>Above 20 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>