force-app/main/default/objects/Unit__c/recordTypes/BTS.recordType-meta.xml
<RecordType>
    <fullName>BTS</fullName>
    <active>true</active>
    <label>BTS</label>
</RecordType>