force-app/main/default/objects/Unit__c/recordTypes/Shed.recordType-meta.xml
<RecordType>
    <fullName>Shed</fullName>
    <active>true</active>
    <label>Shed</label>
</RecordType>