force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_Type__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Point_of_Contact__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>City__c</columns>
    <columns>Type_of_Unit__c</columns>
    <columns>Property_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>