force-app/main/default/objects/Unit__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Unit__c</columns>
    <columns>Saleable_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Point_of_Contact__c</columns>
    <columns>Decision_Maker_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Google_Coordinates_Link__c</columns>
    <columns>Unit_Location__Latitude__s</columns>
    <columns>Unit_Location__Longitude__s</columns>
    <columns>Rent_per_uom_Price_per_uom__c</columns>
    <columns>Total_Rent_Total_Price__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>AW_Land_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>