force-app/main/default/objects/Unit__c/listViews/Shed.listView-meta.xml
<ListView>
    <fullName>Shed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Shed</label>
</ListView>